--- a/Makefile.conf
+++ b/Makefile.conf
@@ -10,10 +10,10 @@
       IS_LIBRARY                 =           yes
 
    # Source Files Directory
-      SRC_DIRECTORY              =           src
+      SRC_DIRECTORY              =           src lib
 
    # Header Files Directory
-      INC_DIRECTORY              =           src
+      INC_DIRECTORY              =           src lib
 
    # Library Header Files Directory  
       LIB_DIRECTORY              =           lib
